--- a/app/src/main/res/layout/fragment_card_view_row.xml
+++ b/app/src/main/res/layout/fragment_card_view_row.xml
@@ -29,10 +29,10 @@
                 android:layout_alignStart="@+id/apptTime" />
 
             <TextView
-                android:id="@+id/apptDate"
+                android:id="@+id/apptDoc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="26 Aug"
+                android:text="Beacon"
                 android:layout_alignBaseline="@+id/apptType"
                 android:layout_alignBottom="@+id/apptType"
                 android:layout_alignParentEnd="true" />
@@ -56,6 +56,7 @@
                 android:text="GP Appointment"
                 android:layout_alignParentTop="true"
                 android:layout_alignStart="@+id/apptTime" />
+
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
