--- a/app/src/main/res/layout/content_patient_records.xml
+++ b/app/src/main/res/layout/content_patient_records.xml
@@ -14,6 +14,16 @@
     tools:showIn="@layout/patient_records">
 
     <TextView
+        android:text="Sex"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView10"
+        tools:text="Sex"
+        android:layout_marginTop="17dp"
+        android:layout_below="@+id/txt_dob"
+        android:layout_alignStart="@+id/txt_dob" />
+
+    <TextView
         android:text="[m/f]"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -82,6 +92,24 @@
         tools:text="Date of Birth"
         android:layout_below="@+id/txt_name"
         android:layout_alignStart="@+id/txt_name" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:textSize="10pt"
+        android:id="@+id/lbl_history"
+        android:text="Your patient history:"
+        android:layout_below="@+id/txt_sex"
+        android:layout_alignStart="@+id/txt_sex" />
+
+    <ImageView
+        android:layout_width="74dp"
+        app:srcCompat="@drawable/trump"
+        android:id="@+id/imageView"
+        android:layout_height="74dp"
+        android:layout_alignTop="@+id/textView5"
+        android:layout_alignParentEnd="true" />
 
 
 </RelativeLayout>
