--- a/app/src/main/res/layout/content_check_in.xml
+++ b/app/src/main/res/layout/content_check_in.xml
@@ -18,19 +18,30 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scaleType="center"
-        android:src="@drawable/ic_check_circle_black_24dp"
+        android:src="@drawable/check_circle"
         android:tint="?attr/colorPrimary"
-        android:scaleX="1"
-        android:scaleY="1"
+        android:scaleX=".5"
+        android:scaleY=".5"
          />
 
     <TextView
         android:id="@+id/check_in_label"
-        android:text="TextView"
+        android:text= "@string/check_in_label"
+        android:textSize="10pt"
+        android:gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/check"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:text="Queue info"
+        android:layout_width="wrap_content"
+        android:textSize="8pt"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/check_in_label"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="68dp" />
+        android:layout_marginTop="32dp"
+        android:id="@+id/textView2" />
 
 </RelativeLayout>
